# Sleepy_cat_books

./: Entregables.txt  README.md  docker-compose.yaml  package-lock.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: backend_pre_start.py  db_seed.py  initial_data.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 07eb2fae5891_add_columns_descripcion_and_foto_de_.py  2340bbcf6dae_create_table_puntuacion.py  3136aee4fdc8_create_table_comunidad.py  32c449b3aa35_create_table_reseñas.py  54a37739ebf9_create_table_libros.py  74fc72929261_add_imagenes_in_publicacion.py  7b80e8becfe6_create_table_publicacion.py  84c42196773c_add_column_fecha_in_publicacion.py  d85737f24bee_create_table_estanteria.py  e22be80f8633_add_imagenes_ilustrativas_to_libro.py  ea338489d696_create_table_usuarios.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: books.py  community.py  library.py  login.py  users.py  utils.py
backend/app/core/: db.py  security.py
backend/app/crud/: books.py  comunidad.py  library.py  users.py
backend/app/models/: books.py  comunidad.py  estanteria.py  token.py  users.py
backend/app/testing/: books.py  communities.py  image.py  reviews.py  users.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_books.py  test_communities.py  test_library.py  (+3 more)
backend/app/tests/crud/: test_books.py  test_library.py  test_users.py
backend/app/tests/utils/: utils.py
backend/app/utils/: config.py
backend/scripts/: add_revision.sh  enter_db.sh  prestart.sh  testing.sh  tests-start.sh
(+133 files in other folders)
